--- a/task3.html
+++ b/task3.html
@@ -5,8 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Task 3</title>
+    <style>
+        .box{
+            display:flex;
+        }
+        .heading{
+            background-color: grey;
+            font-size: large;
+        }
+        .left{
+            background-color: green;
+        }
+        .content{
+            background-color: crimson;
+        }
+        .right{
+            background-color:plum;
+        }
+        footer{
+            background-color:palegoldenrod;
+        }
+        .clear{
+            clear:both;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="heading">
+        <h1>这里是标题</h1>
+    </div>
+    <div class="box">
+        <div class="left">
+            <p>侧边栏2</p>
+        </div>
+        <div class="content">
+            <p>这里是一些文字</P>
+            <p>再来一大段文字</P>
+            <p>地图投影</p>
+        </div>
+        <div class="right">
+            <p>侧边栏</p>
+        </div>
+        <div class="clear"></div>
+    </div>
+    <footer>
+        <p>没人关注的页脚</p>
+    </footer>
 </body>
 </html>
