--- a/task2.html
+++ b/task2.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Task 2</title>
-</head>
 <style>
  
 </style>
@@ -24,7 +23,7 @@
             <input type="checkbox" name="hobby" value="sy">摄影
             <input type="checkbox" name="hobby" value="yy">音乐
             <input type="checkbox" name="hobby" value="yd">阅读</p>
-    <p>签名<textarea rows="5" cols="30"></textarea></p>
+    <p>签名<textarea rows="5" cols="30" style="vertical-align:top;"></textarea></p>
     <input type="submit" value="保存">
 </form>
 </body>
