--- a/task4.html
+++ b/task4.html
@@ -6,18 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Task4</title>
     <style>
-        body{
-            display:flex;
-            flex-direction:column;
+        .para{
+            display: flex;
+            flex-direction: column; 
             justify-content:center;
+            width: 1000px; 
+            height: 600px;
         }
         .para1,.para2{
-            border:2px solid green;
+            border: 2px solid green;
+            margin: 20px;
+            width: 1000px;
         }
     </style>
 </head>
 <body>
-   <div class="para1">A paragraph 1</div> 
-   <div class="para2">A paragraph 2</div>
+    <div class="para">
+        <div class="para1">A paragraph 1</div> 
+        <div class="para2">A paragraph 2</div>
+    </div>
 </body>
 </html>
