--- a/task3.html
+++ b/task3.html
@@ -6,24 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Task 3</title>
     <style>
-        .box{
-            display:flex;
-        }
         .heading{
             background-color: grey;
             font-size: large;
         }
         .left{
             background-color: green;
+            float:left;
+            width: 300px;
+            height:50px;
         }
         .content{
-            background-color: crimson;
+            background-color: red;
+            width: 400px;
+            height:200px;
+            float:left;
         }
         .right{
-            background-color:plum;
+            background-color:pink;
+            width: 300px;
+            height:50px;
+            float:left;
         }
         footer{
-            background-color:palegoldenrod;
+            background-color:yellow;
+            /*clear:left;*/
         }
         .clear{
             clear:both;
