--- a/task6-2.html
+++ b/task6-2.html
@@ -16,6 +16,7 @@
         .center{
             background-color: yellow;
             height:200px;
+           /* width:100%;*/
         }
         .right{
             background-color: blue;
