--- a/xue-er/xue-er.html
+++ b/xue-er/xue-er.html
@@ -89,6 +89,10 @@
                         </li>
                     </ul>
                 </div>
+                <div class="c1">+</div>
+                <div class="c2">+</div>
+                <div class="c3">+</div>
+                <div class="c4">+</div>
             </div>
             <div class="rect2">
                 <p class="font1" id="rec1">最热课程动态</p>
@@ -143,7 +147,9 @@
         </div>
 
         <div class="footer">
+            <div class="grey"></div>
             <div class="muxi">MUXI   STDIO</div>
+            <div class="pink"></div>
             <div class="ccnu">华中师范大学</div>
         </div>
     </div>
