--- a/xue-er/xue-er.html
+++ b/xue-er/xue-er.html
@@ -20,79 +20,99 @@
 
         <div class="main">
             <div class="mask"><img src="1.jpg"></div>
+
+
             <div class="rect1">
-                <div class="cir1">公</div>
-                <div class="cir2">通</div>
-                <div class="cir3">素</div>
-                <div class="cir4">专</div>
-                <div class="text1">
-                    <ul>
-                        <li>
-                            <p class="type1">界面与设计应用</p>
-                            <p class="type2">房子</p>
-                        </li>
-                        <li>
-                            <p class="type1">java程序编程</p>
-                            <p class="type2">赵三金</p>
-                        </li>
-                        <li>
-                            <p class="type1">设计师的自我修养</p>
-                            <p class="type2">分享课程</p>
-                        </li>
-                    </ul>
+
+                <div class="cry">
+                    <div class="cir">公</div>
+
+                    <div class="text1">
+                        <ul>
+                            <li>
+                                <p class="type1">界面与设计应用</p>
+                                <p class="type2">房子</p>
+                            </li>
+                            <li>
+                                <p class="type1">java程序编程</p>
+                                <p class="type2">赵三金</p>
+                            </li>
+                            <li>
+                                <p class="type1">设计师的自我修养</p>
+                                <p class="type2">分享课程</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="c1">+</div>
                 </div>
-                <div class="text2">
-                   <ul>
-                        <li>
-                            <p class="type1">计算机基础</p>
-                            <p class="type2">胡薇</p>
-                        </li>
-                        <li>
-                            <p class="type1">植物观赏学基础</p>
-                            <p class="type2">韩一尾</p>
-                        </li>
-                        <li>
-                            <p class="type1">生活常识101</p>
-                            <p class="type2">分享</p>
-                        </li>
-                    </ul>
+
+                <div class="cry">                
+                    <div class="cir">通</div>
+                    <div class="text2">
+                        <ul>
+                            <li>
+                                <p class="type1">计算机基础</p>
+                                <p class="type2">胡薇</p>
+                            </li>
+                            <li>
+                                <p class="type1">植物观赏学基础</p>
+                                <p class="type2">韩一尾</p>
+                            </li>
+                            <li>
+                                <p class="type1">生活常识101</p>
+                                <p class="type2">分享</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="c2">+</div>
                 </div>
-                <div class="text3">
-                   <ul>
-                        <li>
-                            <p class="type1">新生引导课程</p>
-                            <p class="type2">开学季</p>
-                        </li>
-                        <li>
-                            <p class="type1">党课精神研讨课</p>
-                            <p class="type2">分享课程</p>
-                        </li>
-                        <li>
-                            <p class="type1">专业方向</p>
-                            <p class="type2">毕业生</p>
-                        </li>
-                    </ul>
+
+                <div class="cry">
+
+                    <div class="cir">素</div>
+
+                    <div class="text3">
+                        <ul>
+                            <li>
+                                <p class="type1">新生引导课程</p>
+                                <p class="type2">开学季</p>
+                            </li>
+                            <li>
+                                <p class="type1">党课精神研讨课</p>
+                                <p class="type2">分享课程</p>
+                            </li>
+                            <li>
+                                <p class="type1">专业方向</p>
+                                <p class="type2">毕业生</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="c3">+</div>
                 </div>
-                <div class="text4">
-                    <ul>
-                        <li class="li1">
-                            <p class="type11">影视广告摄影基础</p>
-                            <p class="type22">分享课程</p>
-                        </li>
-                        <li>
-                            <p class="type1">程序员的养成</p>
-                            <p class="type2">赵多金</p>
-                        </li>
-                        <li>
-                            <p class="type1">如何设计师改稿</p>
-                            <p class="type2">甲方</p>
-                        </li>
-                    </ul>
+
+                <div class="cry">
+
+                    <div class="cir">专</div>
+                    <div class="text4">
+                        <ul>
+                            <li class="li1">
+                                <p class="type11">影视广告摄影基础</p>
+                                <p class="type22">分享课程</p>
+                            </li>
+                            <li>
+                                <p class="type1">程序员的养成</p>
+                                <p class="type2">赵多金</p>
+                            </li>
+                            <li>
+                                <p class="type1">如何设计师改稿</p>
+                                <p class="type2">甲方</p>
+                            </li>
+                        </ul>
+                    </div> 
+                    <div class="c4">+</div>
                 </div>
-                <div class="c1">+</div>
-                <div class="c2">+</div>
-                <div class="c3">+</div>
-                <div class="c4">+</div>
             </div>
             <div class="rect2">
                 <p class="font1" id="rec1">最热课程动态</p>
@@ -111,6 +131,7 @@
                     <p>张国</p>
                     <p>《计算机组装》</p>
                 </div>
+            </div>
                 <div class="num1">01</div>
                 <div class="class4">
                     <p>李达</p>
@@ -124,7 +145,7 @@
                 <div class="num5">05</div>
             </div>
             <div class="rect3">
-                <p class="font1" id="rec2">猜你喜欢课程</p>
+                <p class="font1">猜你喜欢课程</p>
                 <p class="font2">根据你的浏览记录，推荐相似课程列表</p>
                 <div class="box1">
                     <p class="font3">《毛泽东思想》</p>
@@ -150,7 +171,7 @@
             <div class="grey"></div>
             <div class="muxi">MUXI   STDIO</div>
             <div class="pink"></div>
-            <div class="ccnu">华中师范大学</div>
+            <div class="ccnu">华中师范大学木犀团队</div>
         </div>
     </div>
 </body>
