--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -8,36 +8,216 @@
     <link rel="stylesheet" href="./xueer-second.css">
 </head>
 <body>
-    <div class="header"></div>
-    <div class="main">
-        <!--课程简介-->
-        <div class="description">
-            <div class="circle inline-block">公</div>
-            <div class="classbox inline-block">
-                <ul>
-                    <li>毛泽东思想照大地</li>
-                    <li>赵三金</li>
-                </ul>
-                <p>讲述伟大人民领袖毛主席的光辉历史事迹。谱写建国伟人的传奇史诗，看苍茫大地主沉浮，数风流人物看今朝。</p>
-                <div class="classbutton">
-                    <input type="button" value="去评课"  class="button">
-                </div>
+    <div class="header">
+        <div class="center">
+            <div class="logo inline-block">
+                <div class="logo-img inline-block"><img src="logo.png"></div>                
+                <div class="xueer inline-block">学而</div>
+            </div>        
+            <div class="homepage inline-block">首页</div>
+            <div class="check inline-block">分类查看</div>
+            <div class="searchbar inline-block">
+                <span class="search_span inline-block">
+                    <input type="text" class="search">
+                </span>
+                <a href="#">
+                    <span class="bar_span inline-block"><img src="bar.png"></span>
+                </a>            
             </div>
-            <div class="label">
-                <div class="labelbox">必学</div>
-                <div class="labelbox">描述精彩丰富</div>
-                <div class="labelbox">推荐</div>
-                <div class="labelbox">作业是论文</div>
-                <div class="labelbox">点名</div>
+            <div class="head-main inline-block"><img src="head.png"></div>
+            <div class="signout inline-block">
+                <input type="button" value="退出"  class="button-top">
             </div>
         </div>
-        <!--热门评论-->
-        <div class="hot-comment"></div>
-        <!--最新评论-->
-        <div class="recent-comment"></div>
-        <!--写评论-->
-        <div class="review"></div>
     </div>
-    <div class="footer"></div>
+    <div class="main">
+        <!--课程简介-->
+        <div class="right">
+            <div class="count">
+                <p class="type1">这门课被</p>
+                <p class="type2">236人</p>
+                <p class="type1">喜欢</p>
+            </div>
+            <div class="pointer">+1</div>
+        </div>
+        <div class="description">
+            <div class="circle">公</div>
+            <div class="circle-right inline-block">
+                <div class="classbox">
+                    <ul>
+                        <li><span class="first">毛泽东思想照大地</span></li>
+                        <li><span class="second">赵三金</span></li>
+                    </ul>
+                    <div class="third">讲述伟大人民领袖毛主席的光辉历史事迹。谱写建国伟人的传奇史诗，看苍茫大地主沉浮，数风流人物看今朝。</div>
+                    <div class="classbutton">
+                        <input type="button" value="去评课"  class="button">
+                    </div>
+                </div>
+                <div class="label">
+                    <div class="labelbox forth bgc-orange">必学</div>
+                    <div class="labelbox bgc-orange">描述精彩丰富</div>
+                    <div class="labelbox bgc-orange">推荐</div>
+                    <div class="labelbox bgc-orange">作业是论文</div>
+                    <div class="labelbox bgc-orange">点名</div>
+                </div>
+            </div>           
+        </div>
+        <!--热门评论-->
+        <div class="hot-comment">
+            <div class="title">热门评论</div>
+            <div class="hotbox">
+                <div class="head"><img src="head1-1.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Edith Watkins</div>
+                    <div class="hot inline-block">Hot</div>
+                    <div class="text">老师治学严谨，要求严格，能深入了解学生的学习和生活状况，循循善诱，平易近人;注意启发和调动学生的积极性，课堂气氛较为活跃;上课例题丰富，不厌其烦，细心讲解，使学生有所收获;半数认真工整，批改作业认真及时并注意讲解学生易犯错误;最重要的是，能虚心并广泛听取学生的意见和反馈信息，做到及时修正和调整自己的教学。总之，是一个不可多得的好教师。 </div>
+                    <div class="time">
+                        <span class="like col-green">赞同（35）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="time">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head1-2.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">肥肥肥</div>
+                    <div class="hot inline-block">Hot</div>
+                    <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（26）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="time">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head1-3.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">用户名0033</div>
+                    <div class="hot inline-block">Hot</div>
+                    <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（14）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--最新评论-->
+        <div class="recent-comment">
+            <div class="title">最新评论</div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-1.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Carlos Snyder</div>
+                    <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（10）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-2.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Barry Peters</div>
+                    <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（09）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-3.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Jadwin</div>
+                    <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（10）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-4.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">用户名3</div>
+                    <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（09）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-5.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Violet Holmes</div>
+                    <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（10）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hotbox">
+                <div class="head"><img src="head2-6.png"></div>
+                <div class="content inline-block">
+                    <div class="name col-green inline-block">Mayme Farmer</div>
+                    <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
+                    <div class="time">
+                        <span class="like col-green">赞同（09）</span>
+                        <span class="year">2016.1.11</span>
+                        <span class="clock">14:49</span>
+                    </div>
+                </div>
+            </div>
+            <div class="page">
+                <div class="pagebox inline-block bgc-green">上一页</div>
+                <div class="pagebox inline-block bgc-green">1</div>
+                <div class="pagebox inline-block bgc-gray">2</div>
+                <div class="pagebox inline-block bgc-gray">3</div>
+                <div class="pagebox inline-block bgc-gray">4</div>
+                <div class="pagebox inline-block bgc-gray">5</div>
+                <div class="pagebox inline-block bgc-green">下一页</div>
+            </div>
+        </div>
+        <!--写评论-->
+        <div class="review">
+            <div class="head"><img src="head2-5.png"></div>
+            <div class="textbox inline-block">
+                <textarea placeholder="确保你已经登录了再写评论哦(•̀ᴗ•́)و ̑ ̑"></textarea>
+                <input type="text" class="inputbox" placeholder="输入标签，用空格分隔">
+                <div class="notice col-green">热门标签，点击直接添加</div>
+                <div class="choice">
+                    <div class="labelbox bgc-gray">标签</div>
+                    <div class="labelbox bgc-orange">标签字数不同</div>
+                    <div class="labelbox bgc-orange">标签</div>
+                    <div class="labelbox bgc-gray">标签字数不同</div>
+                    <div class="labelbox bgc-gray">标签</div>
+                    <div class="labelbox bgc-gray">标签</div>
+                </div>
+                <input type="submit" value="提交">
+            </div>
+        </div>
+    </div>
+    <!--页脚-->
+    <div class="footer">
+        <div class="rabbit"><img src="rabbit.png"></div>
+        <div class="muxibox">
+            <div class="muxi">MUXI</div>
+            <div class="stdio">STDIO</div>
+            <div class="red">|</div>
+            <div class="team">华中师范大学木犀团队</div>
+        </div>
+    </div>
 </body>
 </html>
