feat: modify css

--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -192,7 +192,7 @@
         </div>
         <!--写评论-->
         <div class="review">
-            <div class="head"><img src="head2-5.png"></div>
+            <div class="head last"><img src="head2-5.png"></div>
             <div class="textbox inline-block">
                 <textarea placeholder="确保你已经登录了再写评论哦(•̀ᴗ•́)و ̑ ̑"></textarea>
                 <input type="text" class="inputbox" placeholder="输入标签，用空格分隔">
@@ -204,9 +204,11 @@
                     <div class="labelbox bgc-gray">标签字数不同</div>
                     <div class="labelbox bgc-gray">标签</div>
                     <div class="labelbox bgc-gray">标签</div>
-                </div>
-                <input type="submit" value="提交">
+                </div>           
             </div>
+            <div class="buttonbox">
+                <input type="submit" value="提交" class="button-bottom bgc-green">
+            </div>  
         </div>
     </div>
     <!--页脚-->
