--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="center">
+        <div class="center" id="top">
             <div class="logo inline-block">
                 <div class="logo-img inline-block"><img src="logo.png"></div>                
                 <div class="xueer inline-block">学而</div>
@@ -24,7 +24,7 @@
                     <span class="bar_span inline-block"><img src="bar.png"></span>
                 </a>            
             </div>
-            <div class="head-main inline-block"><img src="head.png"></div>
+            <div class="head-main inline-block"><img src="head2.png"></div>
             <div class="signout inline-block">
                 <input type="button" value="退出"  class="button-top">
             </div>
@@ -211,6 +211,7 @@
             </div>  
         </div>
     </div>
+    <a href="#top"><div class="back bgc-green">⬆</div></a>
     <!--页脚-->
     <div class="footer">
         <div class="rabbit"><img src="rabbit.png"></div>
