--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -10,23 +10,23 @@
 <body>
     <div class="header">
         <div class="center" id="top">
-            <div class="logo inline-block">
-                <div class="logo-img inline-block"><img src="logo.png"></div>                
-                <div class="xueer inline-block">学而</div>
+            <div class="logo inline">
+                <div class="logo-img inline"><img src="logo.png"></div>                
+                <div class="xueer inline">学而</div>
             </div>        
-            <div class="homepage inline-block">首页</div>
-            <div class="check inline-block">分类查看</div>
-            <div class="searchbar inline-block">
-                <span class="search_span inline-block">
+            <div class="homepage inline">首页</div>
+            <div class="check inline">分类查看</div>
+            <div class="searchbar inline">
+                <span class="search_span inline">
                     <input type="text" class="search">
                 </span>
                 <a href="#">
-                    <span class="bar_span inline-block"><img src="bar.png"></span>
+                    <span class="bar_span inline"><img src="bar.png"></span>
                 </a>            
             </div>
-            <div class="head-main inline-block"><img src="head2.png"></div>
-            <div class="signout inline-block">
-                <input type="button" value="退出"  class="button-top">
+            <div class="head-main inline"><img src="head2.png"></div>
+            <div class="signout inline">
+                <button type="button" class="button-top">退出</button>
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="description">
             <div class="circle">公</div>
-            <div class="circle-right inline-block">
+            <div class="circle-right inline">
                 <div class="classbox">
                     <ul>
                         <li><span class="first">毛泽东思想照大地</span></li>
@@ -50,7 +50,7 @@
                     </ul>
                     <div class="third">讲述伟大人民领袖毛主席的光辉历史事迹。谱写建国伟人的传奇史诗，看苍茫大地主沉浮，数风流人物看今朝。</div>
                     <div class="classbutton">
-                        <input type="button" value="去评课"  class="button">
+                        <button type="button" class="button-middle">去评课</button>
                     </div>
                 </div>
                 <div class="label">
@@ -67,9 +67,9 @@
             <div class="title">热门评论</div>
             <div class="hotbox">
                 <div class="head"><img src="head1-1.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Edith Watkins</div>
-                    <div class="hot inline-block">Hot</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Edith Watkins</div>
+                    <div class="hot inline">Hot</div>
                     <div class="text">老师治学严谨，要求严格，能深入了解学生的学习和生活状况，循循善诱，平易近人;注意启发和调动学生的积极性，课堂气氛较为活跃;上课例题丰富，不厌其烦，细心讲解，使学生有所收获;半数认真工整，批改作业认真及时并注意讲解学生易犯错误;最重要的是，能虚心并广泛听取学生的意见和反馈信息，做到及时修正和调整自己的教学。总之，是一个不可多得的好教师。 </div>
                     <div class="time">
                         <span class="like col-green">赞同（35）</span>
@@ -80,9 +80,9 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head1-2.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">肥肥肥</div>
-                    <div class="hot inline-block">Hot</div>
+                <div class="content inline">
+                    <div class="name col-green inline">肥肥肥</div>
+                    <div class="hot inline">Hot</div>
                     <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
                     <div class="time">
                         <span class="like col-green">赞同（26）</span>
@@ -93,9 +93,9 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head1-3.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">用户名0033</div>
-                    <div class="hot inline-block">Hot</div>
+                <div class="content inline">
+                    <div class="name col-green inline">用户名0033</div>
+                    <div class="hot inline">Hot</div>
                     <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
                     <div class="time">
                         <span class="like col-green">赞同（14）</span>
@@ -110,8 +110,8 @@
             <div class="title">最新评论</div>
             <div class="hotbox">
                 <div class="head"><img src="head2-1.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Carlos Snyder</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Carlos Snyder</div>
                     <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
                     <div class="time">
                         <span class="like col-green">赞同（10）</span>
@@ -122,8 +122,8 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head2-2.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Barry Peters</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Barry Peters</div>
                     <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
                     <div class="time">
                         <span class="like col-green">赞同（09）</span>
@@ -134,8 +134,8 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head2-3.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Jadwin</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Jadwin</div>
                     <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
                     <div class="time">
                         <span class="like col-green">赞同（10）</span>
@@ -146,8 +146,8 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head2-4.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">用户名3</div>
+                <div class="content inline">
+                    <div class="name col-green inline">用户名3</div>
                     <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
                     <div class="time">
                         <span class="like col-green">赞同（09）</span>
@@ -158,8 +158,8 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head2-5.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Violet Holmes</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Violet Holmes</div>
                     <div class="text">老师授课的方式非常适合我们，他根据本课程知识结构的特点，重点突出，层次分明。理论和实际相结合，通过例题使知识更条理化。但授课速度有点快，来不及记录。</div>
                     <div class="time">
                         <span class="like col-green">赞同（10）</span>
@@ -170,8 +170,8 @@
             </div>
             <div class="hotbox">
                 <div class="head"><img src="head2-6.png"></div>
-                <div class="content inline-block">
-                    <div class="name col-green inline-block">Mayme Farmer</div>
+                <div class="content inline">
+                    <div class="name col-green inline">Mayme Farmer</div>
                     <div class="text">老师授课有条理，有重点，对同学既热情又严格，是各位老师学习的榜样。</div>
                     <div class="time">
                         <span class="like col-green">赞同（09）</span>
@@ -181,19 +181,19 @@
                 </div>
             </div>
             <div class="page">
-                <div class="pagebox inline-block bgc-green">上一页</div>
-                <div class="pagebox inline-block bgc-green">1</div>
-                <div class="pagebox inline-block bgc-gray">2</div>
-                <div class="pagebox inline-block bgc-gray">3</div>
-                <div class="pagebox inline-block bgc-gray">4</div>
-                <div class="pagebox inline-block bgc-gray">5</div>
-                <div class="pagebox inline-block bgc-green">下一页</div>
+                <div class="pagebox inline bgc-green">上一页</div>
+                <div class="pagebox inline bgc-green">1</div>
+                <div class="pagebox inline bgc-gray">2</div>
+                <div class="pagebox inline bgc-gray">3</div>
+                <div class="pagebox inline bgc-gray">4</div>
+                <div class="pagebox inline bgc-gray">5</div>
+                <div class="pagebox inline bgc-green">下一页</div>
             </div>
         </div>
         <!--写评论-->
         <div class="review">
             <div class="head last"><img src="head2-5.png"></div>
-            <div class="textbox inline-block">
+            <div class="textbox inline">
                 <textarea placeholder="确保你已经登录了再写评论哦(•̀ᴗ•́)و ̑ ̑"></textarea>
                 <input type="text" class="inputbox" placeholder="输入标签，用空格分隔">
                 <div class="notice col-green">热门标签，点击直接添加</div>
