feat: modify css

--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -50,7 +50,7 @@
                     </ul>
                     <div class="third">讲述伟大人民领袖毛主席的光辉历史事迹。谱写建国伟人的传奇史诗，看苍茫大地主沉浮，数风流人物看今朝。</div>
                     <div class="classbutton">
-                        <button type="button" class="button-middle">去评课</button>
+                        <a href="#"><button type="button" class="button-middle">去评课</button></a>
                     </div>
                 </div>
                 <div class="label">
@@ -207,11 +207,11 @@
                 </div>           
             </div>
             <div class="buttonbox">
-                <input type="submit" value="提交" class="button-bottom bgc-green">
+                <a href="#"><input type="submit" value="提交" class="button-bottom bgc-green"></a>
             </div>  
         </div>
+        <a href="#top"><div class="back bgc-green">⬆</div></a>
     </div>
-    <a href="#top"><div class="back bgc-green">⬆</div></a>
     <!--页脚-->
     <div class="footer">
         <div class="rabbit"><img src="rabbit.png"></div>
