--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -26,7 +26,7 @@
             </div>
             <div class="head-main inline"><img src="head2.png"></div>
             <div class="signout inline">
-                <button type="button" class="button-top">退出</button>
+                <a href="#"><button type="button" class="button-top">退出</button></a>
             </div>
         </div>
     </div>
@@ -181,13 +181,13 @@
                 </div>
             </div>
             <div class="page">
-                <div class="pagebox inline bgc-green">上一页</div>
-                <div class="pagebox inline bgc-green">1</div>
-                <div class="pagebox inline bgc-gray">2</div>
-                <div class="pagebox inline bgc-gray">3</div>
-                <div class="pagebox inline bgc-gray">4</div>
-                <div class="pagebox inline bgc-gray">5</div>
-                <div class="pagebox inline bgc-green">下一页</div>
+                <a href="#"><div class="pagebox inline bgc-green">上一页</div></a>
+                <a href="#"><div class="pagebox inline bgc-green">1</div></a>
+                <a href="#"><div class="pagebox inline bgc-gray">2</div></a>
+                <a href="#"><div class="pagebox inline bgc-gray">3</div></a>
+                <a href="#"><div class="pagebox inline bgc-gray">4</div></a>
+                <a href="#"><div class="pagebox inline bgc-gray">5</div></a>
+                <a href="#"><div class="pagebox inline bgc-green">下一页</div></a>
             </div>
         </div>
         <!--写评论-->
