feat: modify css

--- a/muxi/muxi.html
+++ b/muxi/muxi.html
@@ -19,7 +19,8 @@
                 <div class="head-img inline"><img src="backstage.png"></div>
                 <div class="title inline">后台组成员</div>                
             </div>
-            <div class="year">2014年</div>
+            <div class="year-before inline">•</div>
+            <div class="year inline">2014年</div>
             <div class="container">
                 <div class="profile">
                     <div class="avatar">muxi</div>
@@ -52,7 +53,8 @@
                     <span>座右铭：这是座右铭这是座右铭这是座右铭这是座右铭这是座右铭这是座右铭这是座右铭</span>
                 </div>
             </div>
-            <div class="year">2015年</div>
+            <div class="year-before inline">•</div>
+            <div class="year inline">2015年</div>
             <div class="container">
                 <div class="profile">
                     <div class="avatar">muxi</div>
@@ -73,7 +75,8 @@
                 <div class="head-img inline"><img src="web.png"></div>
                 <div class="title inline">前端组成员</div>     
             </div>
-            <div class="year">2014年</div>
+            <div class="year-before inline">•</div>
+            <div class="year inline">2014年</div>
             <div class="container">
                 <div class="profile">
                     <div class="avatar">muxi</div>
@@ -100,7 +103,8 @@
                 <div class="head-img inline"><img src="design.png"></div>
                 <div class="title inline">设计组成员</div>     
             </div>
-            <div class="year">2014年</div>
+            <div class="year-before inline">•</div>
+            <div class="year inline">2014年</div>
             <div class="container">
                 <div class="profile">
                     <div class="avatar">muxi</div>
@@ -127,7 +131,8 @@
                 <div class="head-img inline"><img src="product.png"></div>
                 <div class="title inline">产品组成员</div>     
             </div>
-            <div class="year">2014年</div>
+            <div class="year-before inline">•</div>
+            <div class="year inline">2014年</div>
             <div class="container">
                 <div class="profile">
                     <div class="avatar">muxi</div>
