--- a/xueer2/xueer-second.html
+++ b/xueer2/xueer-second.html
@@ -210,7 +210,7 @@
                 <a href="#"><input type="submit" value="提交" class="button-bottom bgc-green"></a>
             </div>  
         </div>
-        <a href="#top"><div class="back bgc-green">⬆</div></a>
+        <div class="back bgc-green"><a href="#top">⬆</a></div>
     </div>
     <!--页脚-->
     <div class="footer">
