--- a/task/task/task.html
+++ b/task/task/task.html
@@ -11,8 +11,8 @@
     <div class="main">
     <h1 class="title">TASK1</h1>
         <div class="container">
-            <div class="left">木犀一号</div>
-            <div class="right"><span class="text">木犀还没有文案没有文案二号</span></div>
+            <div class="blue">木犀一号</div>
+            <div class="green"><span class="text">木犀还没有文案没有文案二号</span></div>
         </div>
     </div>
 </body>
